--- a/src/client/index.html
+++ b/src/client/index.html
@@ -14,9 +14,10 @@
   </head>
   <body>
     <!-- Add your site or application content here -->
+    <div ng-include="'app/layout/navbar.html'"></div>
     <div class="container-fluid">
       <div class="row">
-        <h1>HELLO</h1>
+        <div ng-include="'app/layout/sidebar.html'"></div>
       </div>
     </div>
 
