Add dashboard directory, html file and reference in index.html

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -18,6 +18,7 @@
     <div class="container-fluid">
       <div class="row">
         <div ng-include="'app/layout/sidebar.html'"></div>
+        <div ng-include="'app/dashboard/dashboard.html'"></div>
       </div>
     </div>
 
